--- a/package.json
+++ b/package.json
@@ -159,11 +159,7 @@
     "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
-    "source-map-support": "^0.4.8",
-    "font-awesome": "^4.7.0",
-    "react-fontawesome": "^1.5.0",
-    "react-sidebar": "^2.2.1",
-    "reset-css": "^2.2.0"
+    "source-map-support": "^0.4.8"
   },
   "devEngines": {
     "node": ">=6.x",
