--- a/package.json
+++ b/package.json
@@ -147,7 +147,11 @@
     "webpack-dev-middleware": "^1.9.0",
     "webpack-hot-middleware": "^2.15.0",
     "webpack-merge": "^2.4.0",
-    "webpack-validator": "^2.3.0"
+    "webpack-validator": "^2.3.0",
+    "font-awesome": "^4.7.0",
+    "react-fontawesome": "^1.5.0",
+    "react-sidebar": "^2.2.1",
+    "reset-css": "^2.2.0"
   },
   "dependencies": {
     "electron-debug": "^1.1.0",
